<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wesoft.inventory.SettingActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pd5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/pd5"
                        android:text="@string/set_user"
                        android:textSize="@dimen/h4"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4">

                    <EditText
                        android:id="@+id/txtUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textAllCaps="true"
                        android:inputType="textPersonName"
                        android:hint="@string/set_user_value"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/pd5"
                        android:text="@string/set_languate"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/h4" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4">

                    <RadioGroup
                        android:id="@+id/rdoLanguateGroup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <RadioButton android:id="@+id/rdoLanguateThai"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/set_languate_thai"
                            android:textSize="@dimen/h4"/>
                        <RadioButton android:id="@+id/rdoLanguateEnglish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/set_languate_english"
                            android:textSize="@dimen/h4"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:padding="@dimen/pd5"
                    android:text="@string/set_hd_import_export"
                    android:textAlignment="gravity"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/h3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/pd5"
                        android:text="@string/set_device"
                        android:textSize="@dimen/h4"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4">

                    <EditText
                        android:id="@+id/txtDevice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textAllCaps="true"
                        android:inputType="textPersonName"
                        android:hint="@string/set_device_value"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/pd5"
                        android:text="@string/set_network"
                        android:textSize="@dimen/h4"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4">

                    <EditText
                        android:id="@+id/txtNetwork"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textAllCaps="true"
                        android:inputType="textPersonName"
                        android:hint="@string/set_network_value"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/pd5"
                        android:text="@string/set_database"
                        android:textSize="@dimen/h4"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4">

                    <EditText
                        android:id="@+id/txtDatabase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textAllCaps="true"
                        android:inputType="textPersonName"
                        android:hint="@string/set_database_value"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:padding="@dimen/pd5"
                    android:text="@string/set_hd_sound"
                    android:textAlignment="gravity"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/h3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layUploadandClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/pd5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6">

                        <CheckBox
                            android:id="@+id/chkFound"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/set_chk_found"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/h4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4">

                            <EditText
                                android:id="@+id/txtFound"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/set_txt_found" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <ImageButton
                                android:id="@+id/btnSelectFound"
                                android:layout_width="@dimen/btsq42"
                                android:layout_height="@dimen/btsq42"
                                android:background="@color/colorPrimaryLight"
                                android:src="@drawable/ic_bin" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/pd5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6">

                        <CheckBox
                            android:id="@+id/chkNotFound"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/set_chk_not_found"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/h4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4">

                            <EditText
                                android:id="@+id/txtNotFound"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/set_txt_not_found" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <ImageButton
                                android:id="@+id/btnSelectNotFound"
                                android:layout_width="@dimen/btsq42"
                                android:layout_height="@dimen/btsq42"
                                android:background="@color/colorPrimaryLight"
                                android:src="@drawable/ic_bin" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/pd5">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/set_btn_save"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/h3" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
