<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wesoft.inventory.ImportActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/pd5">

            <LinearLayout
                android:id="@+id/layImportData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark"
                        android:padding="@dimen/pd5"
                        android:text="@string/imp_import_data"
                        android:textAlignment="gravity"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/h3" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdoOverWrite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/overwrite"
                        android:textSize="@dimen/h4" />

                    <RadioButton
                        android:id="@+id/rdoAppent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/append"
                        android:textSize="@dimen/h4" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:padding="@dimen/pd5"
                            android:text="@string/imp_delimiter"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/h4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/delimiter_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/txtDelimiter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/delimiter"
                            android:inputType="textPersonName"
                            android:textSize="@dimen/h4" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/laySelectSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark"
                        android:padding="@dimen/pd5"
                        android:text="@string/imp_select_source"
                        android:textAlignment="gravity"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/h3" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/rdoSelectPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdoDevice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:tag="DEVICE"
                        android:text="@string/imp_on_device"
                        android:textSize="@dimen/h4" />

                    <RadioButton
                        android:id="@+id/rdoNetwork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:tag="NETWORK"
                        android:text="@string/imp_on_network"
                        android:textSize="@dimen/h4" />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/txtPathFile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/imp_path"
                            android:inputType="textPersonName"
                            android:textSize="@dimen/h4" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layUploadandClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/pd5">

                    <Button
                        android:id="@+id/btnClearTransection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/button_delete"
                        android:text="@string/imp_clear_transection"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/h3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="@dimen/pd5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6">

                        <CheckBox
                            android:id="@+id/chkProduct"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/imp_chk_product"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/h4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4">

                        <EditText
                            android:id="@+id/txtProduct"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/imp_chk_product" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageButton
                            android:id="@+id/btnProductDelete"
                            android:layout_width="@dimen/btsq42"
                            android:layout_height="@dimen/btsq42"
                            android:background="@color/button_delete"
                            android:src="@drawable/ic_bin" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="@dimen/pd5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6">

                        <CheckBox
                            android:id="@+id/chkCounting"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/imp_chk_counting"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/h4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4">

                        <EditText
                            android:id="@+id/txtCounting"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/imp_chk_counting" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageButton
                            android:id="@+id/btnCountingDelete"
                            android:layout_width="@dimen/btsq42"
                            android:layout_height="@dimen/btsq42"
                            android:background="@color/button_delete"
                            android:src="@drawable/ic_bin" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="@dimen/pd5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6">

                        <CheckBox
                            android:id="@+id/chkLocation"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/imp_chk_location"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/h4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4">

                        <EditText
                            android:id="@+id/txtLocation"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/imp_chk_location" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageButton
                            android:id="@+id/btnLocationDelete"
                            android:layout_width="@dimen/btsq42"
                            android:layout_height="@dimen/btsq42"
                            android:background="@color/button_delete"
                            android:src="@drawable/ic_bin" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/pd5">

                <Button
                    android:id="@+id/btnImport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/imp_btn_import"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/h3" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
